--- a/static/index.html
+++ b/static/index.html
@@ -1,30 +1,112 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Bulk SharePoint Upload</title>
-</head>
-<body>
-    <h2>Upload Structured Excel</h2>
-    <input type="file" id="fileInput">
-    <button onclick="uploadFile()">Upload</button>
+    <title>Bulk SharePoint Processor</title>
 
-    <pre id="result"></pre>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css" rel="stylesheet">
+
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+</head>
+
+<body class="bg-light">
+
+<div class="container mt-5">
+    <div class="card shadow">
+        <div class="card-body">
+
+            <h4 class="mb-4">Bulk SharePoint Upload</h4>
+
+            <input type="file" id="fileInput" class="form-control mb-3">
+            <button class="btn btn-primary" onclick="uploadFile()">Upload & Process</button>
+
+            <div id="loading" class="mt-3 text-primary" style="display:none;">
+                Processing... Please wait...
+            </div>
+
+            <hr>
+
+            <table id="resultTable" class="display" style="width:100%">
+                <thead>
+                    <tr>
+                        <th>Row</th>
+                        <th>Incident ID</th>
+                        <th>Status</th>
+                        <th>Reason</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+
+            <button id="downloadBtn" class="btn btn-danger mt-3" style="display:none;" onclick="downloadFailures()">
+                Download Failure Report
+            </button>
+
+        </div>
+    </div>
+</div>
 
 <script>
+let table;
+
+$(document).ready(function(){
+    table = $('#resultTable').DataTable();
+});
+
 async function uploadFile() {
+
     const fileInput = document.getElementById("fileInput");
+
+    if (!fileInput.files.length) {
+        alert("Please select a file.");
+        return;
+    }
+
     const formData = new FormData();
     formData.append("file", fileInput.files[0]);
 
-    const response = await fetch("http://localhost:8000/bulk-upload", {
+    document.getElementById("loading").style.display = "block";
+
+    const response = await fetch("/bulk-upload", {
         method: "POST",
         body: formData
     });
 
     const data = await response.json();
-    document.getElementById("result").textContent =
-        JSON.stringify(data, null, 2);
+
+    document.getElementById("loading").style.display = "none";
+
+    table.clear();
+    let hasFailure = false;
+
+    data.summary.forEach(row => {
+
+        table.row.add([
+            row.row,
+            row.IncidentID || "",
+            row.status,
+            row.reason || ""
+        ]);
+
+        if(row.status === "Failed"){
+            hasFailure = true;
+        }
+    });
+
+    table.draw();
+
+    if(hasFailure){
+        document.getElementById("downloadBtn").style.display = "inline-block";
+    }
+}
+
+function downloadFailures(){
+    window.location.href = "/download-failures";
 }
 </script>
+
 </body>
 </html>
